@@ -1,6 +1,7 @@
 2015-09-24  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* sample/Extension/test_dds_texture.rb: Added.
+	* sample/NamespaceMigration/test_dds_texture.rb: Added.
 
 2015-09-23  vaiorabbit  <http://twitter.com/vaiorabbit>
 
